fixing rendering of play button on iOS

--- a/public/css/media-player.css
+++ b/public/css/media-player.css
@@ -111,7 +111,7 @@
   display: inline-block;
   background-size: cover;
   background-position-y: center;
-    position: relative;
+  position: relative;
 }
   .artwork .gradient {
     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+100&0+0,1+69 */
@@ -219,6 +219,8 @@
   position: absolute;
   top: 0;
   left: 0;
+  cursor: pointer;
+  line-height: 45px;
 }
 
 
